Moving to xtensor

--- a/test_reader/Makefile
+++ b/test_reader/Makefile
@@ -1,8 +1,8 @@
 PREFIX=/usr/local
 C++ = g++
-C_FLAGS = -g
-INCLUDES = -I$(PREFIX)/include -I./
-LIBRARIES = -O2
+C_FLAGS = -g -std=c++14 -O2
+INCLUDES = -I$(PREFIX)/include -I./ -I/home/giles/anaconda3/include
+LIBRARIES = -llapack -lblas
 FLAGS =  $(INCLUDES) $(LIBRARIES) $(C_FLAGS)
 
 testreader.exe: testreader.o
